--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway</title>
-          <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+          <link href="Resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header_bg main_nav">
